--- a/prj-00-initial-starting-setup/app.css
+++ b/prj-00-initial-starting-setup/app.css
@@ -38,8 +38,8 @@ textarea:focus {
 
 button {
   font: inherit;
-  background: #00ff77;
-  border: 1px solid #00ff77;
+  background: #ff0062;
+  border: 1px solid #ff0062;
   cursor: pointer;
   color: white;
   padding: 0.75rem 1rem;
@@ -51,17 +51,17 @@ button:focus {
 
 button:hover,
 button:active {
-  background: #0b552e;
-  border-color: #0b552e;
+  background: #a80041;
+  border-color: #a80041;
 }
 
 .projects {
   margin: 1rem;
-  border: 1px solid #00ff77;
+  border: 1px solid #ff0062;
 }
 
 .projects header {
-  background: #00ff77;
+  background: #ff0062;
   height: 3.5rem;
   display: flex;
   justify-content: center;
@@ -91,10 +91,11 @@ button:active {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
   padding: 1rem;
   margin: 1rem;
+  background: white;
 }
 
 .projects li h2 {
-  color: #00ff77;
+  color: #ff0062;
   margin: 0.5rem 0;
 }
 
@@ -122,6 +123,6 @@ button:active {
 #user-input {
   margin: 1rem;
   padding: 1rem;
-  border: 1px solid #00ff77;
+  border: 1px solid #ff0062;
   background: #f7f7f7;
 }
